[GPUP] Ignore an IPC message if the message receiver has been destroyed https://bugs.webkit.org/show_bug.cgi?id=221920

Reviewed by Eric Carlson.

No new tests, fixing test crashes due to assertion failures.

* WebProcess/GPU/GPUProcessConnection.cpp:
(WebKit::GPUProcessConnection::dispatchMessage):


Canonical link: https://commits.webkit.org/234120@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272887 268f45cc-cd09-0410-ab3c-d52691b4dbfc